--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,55 @@
-affine==2.3.0
-alembic==1.4.1
 appnope==0.1.0
-astroid==2.3.3
-async-generator==1.10
 attrs==19.3.0
-autopep8==1.5
 backcall==0.1.0
-bleach==3.1.0
-Bootstrap-Flask==1.2.0
-branca==0.3.1
-Cartopy===0.18.0b2.dev48-
-certifi==2019.11.28
-cffi==1.14.0
-chardet==3.0.4
-Click==7.0
-click-datetime==0.2
-click-plugins==1.1.1
-cligj==0.5.0
-contextily==1.0rc2
-cryptography==2.8
+bleach==3.1.3
 cycler==0.10.0
-Cython==0.29.15
-DateTime==4.3
-decorator==4.4.1
+decorator==4.4.2
 defusedxml==0.6.0
-Deprecated==1.2.7
-descartes==1.1.0
-dominate==2.4.0
 entrypoints==0.3
-Fiona==1.8.13.post1
-geographiclib==1.50
-geojsonio==0.0.3
-geopandas==0.7.0
-geoplot==0.4.0
-geopy==1.21.0
-gunicorn==20.0.4
-idna==2.8
-ipykernel==5.1.3
-ipyleaflet==0.12.3
-ipython==7.11.1
+ipykernel==5.2.0
+ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jedi==0.15.2
-Jinja2==2.10.3
-joblib==0.14.1
+jedi==0.16.0
+Jinja2==2.11.1
 jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
-jupyter-kernel-gateway==2.4.0
-jupyter-server==0.1.1
-jupyterlab-pygments==0.1.0
-jwcrypto==0.7
+jupyter-client==6.1.0
+jupyter-core==4.6.3
 kiwisolver==1.1.0
-lazy-object-proxy==1.4.3
-Mako==1.1.2
-mapclassify==2.2.0
 MarkupSafe==1.1.1
-matplotlib==3.1.2
-mccabe==0.6.1
-mercantile==1.1.2
+matplotlib==3.2.1
 mistune==0.8.4
-munch==2.5.0
 nbconvert==5.6.1
-nbformat==5.0.3
+nbformat==5.0.4
 notebook==6.0.3
-numpy==1.18.1
-panda==0.3.1
-pandas==0.25.3
+numpy==1.18.2
+pandas==1.0.3
 pandocfilters==1.4.2
-parso==0.5.2
+parso==0.6.2
+patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
 plotly==4.5.4
-pluggy==0.13.1
+plotly-express==0.4.1
 prometheus-client==0.7.1
-prompt-toolkit==3.0.2
+prompt-toolkit==3.0.4
 ptyprocess==0.6.0
-pycodestyle==2.5.0
-pycparser==2.20
-pydocstyle==5.0.2
-pyflakes==2.1.1
-Pygments==2.5.2
-pyHS100==0.3.5
-pylint==2.4.4
+Pygments==2.6.1
 pyparsing==2.4.6
-pyproj==2.6.0
 pyrsistent==0.15.7
-pyshp==2.1.0
 python-dateutil==2.8.1
-python-editor==1.0.4
-python-jsonrpc-server==0.3.4
-python-language-server==0.31.8
 pytz==2019.3
-pyzmq==18.1.1
-qtconsole==4.6.0
-rasterio==1.1.3
-requests==2.22.0
+pyzmq==19.0.0
 retrying==1.3.3
-rope==0.16.0
-scikit-learn==0.22.2.post1
 scipy==1.4.1
-seaborn==0.9.0
+seaborn==0.10.0
 Send2Trash==1.5.0
-Shapely==1.7.0
 six==1.14.0
-snowballstemmer==2.0.0
-snuggs==1.4.7
-SQLAlchemy==1.3.13
+statsmodels==0.11.1
 terminado==0.8.3
 testpath==0.4.4
-torch==1.4.0
-torchvision==0.5.0
-tornado==6.0.3
+tornado==6.0.4
 traitlets==4.3.3
-traittypes==0.2.1
-typing==3.7.4.1
-ujson==1.35
-uritemplate==3.0.1
-urllib3==1.25.8
-visitor==0.1.3
-voila==0.1.21
 wcwidth==0.1.8
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-wrapt==1.11.2
-xarray==0.15.0
-xlrd==1.2.0
