--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.3
+certifi==2019.11.28
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+idna==2.9
+imageio==2.8.0
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
@@ -29,10 +33,12 @@ parso==0.6.2
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.0.0
 plotly==4.5.4
 plotly-express==0.4.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
+psutil==5.7.0
 ptyprocess==0.6.0
 Pygments==2.6.1
 pyparsing==2.4.6
@@ -40,6 +46,7 @@ pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==19.0.0
+requests==2.23.0
 retrying==1.3.3
 scipy==1.4.1
 seaborn==0.10.0
@@ -50,6 +57,8 @@ terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
+urllib3==1.25.8
 wcwidth==0.1.8
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xlrd==1.2.0
