--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
-bleach==3.1.3
+bleach==3.1.4
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+get==2019.4.13
 idna==2.9
 imageio==2.8.0
 ipykernel==5.2.0
@@ -17,7 +18,9 @@ ipywidgets==7.5.1
 jedi==0.16.0
 Jinja2==2.11.1
 jsonschema==3.2.0
-jupyter-client==6.1.0
+jupyter==1.0.0
+jupyter-client==6.1.2
+jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
@@ -36,16 +39,22 @@ pickleshare==0.7.5
 Pillow==7.0.0
 plotly==4.5.4
 plotly-express==0.4.1
+post==2019.4.13
 prometheus-client==0.7.1
-prompt-toolkit==3.0.4
+prompt-toolkit==3.0.5
 psutil==5.7.0
 ptyprocess==0.6.0
+public==2019.4.13
 Pygments==2.6.1
 pyparsing==2.4.6
-pyrsistent==0.15.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==19.0.0
+qtconsole==4.7.2
+QtPy==1.9.0
+query-string==2019.4.13
+request==2019.4.13
 requests==2.23.0
 retrying==1.3.3
 scipy==1.4.1
@@ -58,7 +67,7 @@ testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
 urllib3==1.25.8
-wcwidth==0.1.8
+wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
 xlrd==1.2.0
