--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
+branca==0.3.1
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
@@ -12,6 +13,7 @@ get==2019.4.13
 idna==2.9
 imageio==2.8.0
 ipykernel==5.2.0
+ipyleaflet==0.12.3
 ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
@@ -23,11 +25,12 @@ jupyter-client==6.1.2
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.1.0
+lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
-nbformat==5.0.4
+nbformat==5.0.5
 notebook==6.0.3
 numpy==1.18.2
 pandas==1.0.3
@@ -48,7 +51,9 @@ public==2019.4.13
 Pygments==2.6.1
 pyparsing==2.4.6
 pyrsistent==0.16.0
+pyshp==2.1.0
 python-dateutil==2.8.1
+pytrends==4.7.2
 pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.2
@@ -66,8 +71,10 @@ terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
+traittypes==0.2.1
 urllib3==1.25.8
 wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xarray==0.15.1
 xlrd==1.2.0
