--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,10 @@ ipywidgets = "*"
 ipyleaflet = "*"
 pyshp = "*"
 imageio = "*"
+unidecode = "*"
+scipy = "*"
+matplotlib = "*"
+plotly = "*"
 
 [requires]
 python_version = "3.8"
